infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: port-80
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: port-443
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gateway-tls
      allowedRoutes:
        namespaces:
          from: All
